--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
         </ul>
 
         <div class="detail-image-container">
-            <div class="detail-image-frame">
+          <div class = "detail-image-frame">
                 <img class="detail-image" src="img/otter1.jpg" alt="">
-                <span clas="detail-image-title">Stayin' Alive </span>
-            </div>
+                <span class="detail-image-title">Stayin' Alive </span>
+          </div>
         </div>
     </main>
 
