--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name = "viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Code for favicon-->
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -66,10 +66,10 @@
         </ul>
 
         <div class="detail-image-container">
-          <div class = "detail-image-frame">
-                <img class="detail-image" data-image-role="taget" src="img/otter1.jpg" alt="">
+            <div class="detail-image-frame">
+                <img class="detail-image" data-image-role="target" src="img/otter1.jpg" alt="">
                 <span class="detail-image-title" data-image-role="title">Stayin' Alive </span>
-          </div>
+            </div>
         </div>
     </main>
     <script src="scripts/main.js" charset="utf-8"></script>
